<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="com.artyomefimov.pocketdictionary.viewmodel.word.WordViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_translations"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/translations_label" />

                <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        app:mutableVisibility="@{viewModel.getLoadingVisibility()}"
                        android:elevation="10dp"/>

                <TextView
                        android:id="@+id/original_word_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/text_margin"
                        android:layout_marginTop="@dimen/text_margin"
                        android:padding="@dimen/label_padding"
                        android:text="@string/original_word_label"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textSize="18sp" />

                <androidx.cardview.widget.CardView
                        android:id="@+id/original_word_card_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/original_word_label"
                        android:padding="@dimen/text_padding"
                        app:cardCornerRadius="@dimen/corner_radius"
                        app:cardElevation="@dimen/card_elevation"
                        app:cardUseCompatPadding="true">

                    <EditText
                            android:id="@+id/original_word_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/rounded_edit_text"
                            android:hint="@string/original_word_hint"
                            android:inputType="textNoSuggestions"
                            android:minHeight="43dp"
                            android:padding="@dimen/text_padding"
                            android:textSize="20sp" />

                </androidx.cardview.widget.CardView>



                <TextView
                        android:id="@+id/translations_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/original_word_card_view"
                        android:layout_marginStart="@dimen/text_margin"
                        android:layout_marginTop="@dimen/text_margin"
                        android:padding="@dimen/label_padding"
                        android:text="@string/translations_label"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textSize="18sp" />



            </RelativeLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_translation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                app:srcCompat="@drawable/ic_add_word" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>