<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/menu_action_search"
            android:icon="@drawable/ic_action_search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            android:title="@string/search_menu_item"
            app:showAsAction="ifRoom|collapseActionView"/>
</menu>