<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp">
    <EditText
            android:id="@+id/translation_edit"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>